noinst_HEADERS = \
Anomaly.hpp \
Block.hpp \
Bookmark.hpp \
BuiltInFunctions.hpp \
Character.hpp \
CreationFuncs.hpp \
DLLExport.hpp \
DLLExportString.hpp \
Defines.hpp \
Expression.hpp \
HelperFuncs.hpp \
Interface.hpp \
Interpreter.hpp \
LanguageConstants.hpp \
List.hpp \
Macros.hpp \
Operator.hpp \
ParserAnomaly.hpp \
ReaderSource.hpp \
ReaderSourceFile.hpp \
ReaderSourceString.hpp \
Scope.hpp \
ScopeObject.hpp \
ScopeObjectVisitor.hpp \
Slib-Common.hpp \
Slib-List.hpp \
Slib-Math.hpp \
Slib-Time.hpp \
SpecialVars.hpp \
StoryScript.hpp \
Types.hpp \
Unicode.hpp \
UseNarrowChar.hpp \
UseWideChar.hpp \
Variable.hpp \
VersionInfo.hpp \
Word.hpp \
mpfrxx.h
